Fixed translation issues

--- a/app/locale/en_US/Ebanx_Ebanx.csv
+++ b/app/locale/en_US/Ebanx_Ebanx.csv
@@ -14,7 +14,9 @@
 "Credit Card CVV","Credit Card CVV"
 "Credit Card Type","Credit Card Type"
 "Expiration Date","Expiration Date"
+"Day","Day"
 "Month","Month"
+"Year","Year"
 "January","January"
 "February","February"
 "March","March"
