--- a/app/locale/pt_BR/Ebanx_Ebanx.csv
+++ b/app/locale/pt_BR/Ebanx_Ebanx.csv
@@ -14,7 +14,9 @@
 "Credit Card CVV","Código de segurança do cartão"
 "Credit Card Type","Bandeira do cartão"
 "Expiration Date","Data de validade do cartão"
+"Day","Dia"
 "Month","Mês"
+"Year","Ano"
 "January","Janeiro"
 "February","Fevereiro"
 "March","Março"
